# master/src/main/java/org/crunchycookie/orion/master/rest/impl/TasksAPIImpl.java
@@ -1,0 +1,34 @@
+/*
+ * Copyright 2021 crunchycookie
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package org.crunchycookie.orion.master.rest.impl;
+
+import java.util.UUID;
+import org.crunchycookie.orion.master.rest.api.TasksApiDelegate;
+import org.springframework.core.io.InputStreamResource;
+import org.springframework.core.io.Resource;
+import org.springframework.http.ResponseEntity;
+import org.springframework.stereotype.Service;
+
+@Service
+public class TasksAPIImpl implements TasksApiDelegate {
+
+  @Override
+  public ResponseEntity<Resource> downloadFiles(UUID taskId, String filename) {
+    return ResponseEntity.ok(new InputStreamResource(
+        this.getClass().getClassLoader().getResourceAsStream("test.txt")));
+  }
+}
